--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -16,6 +16,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709125.md#1" target="_blank">加国前外交官被中共关押一年 待遇恶劣</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709125.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Kang-5-150x120.jpg" align ="left"></a>12月10日，是加拿大前外交官康明凯（Michael Kovrig）和加拿大商人斯帕沃尔（Michael Spavor）被中共关押一周年的日子。康明凯是国际危机组织的高级顾问，该组织主席罗伯特．马利（Robert Malley）称，康明凯在关押期间待遇恶劣。相对于孟晚舟保释期间住豪宅的待遇，他希望康明康能受到公正对待。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 9:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11709222.md#1" target="_blank">【思想领袖】专访《川普的白宫》一书作者</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11709222.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Epoch_Times9A6A2629-1-1200x775-150x120.jpg" align ="left"></a>英文《大纪元时报》资深记者杨杰凯（Jan Jekielek）在2019年11月21日对维吉尼亚州总统历史学家、《川普的白宫：他的总统生涯的真实故事》一书作者道格?韦德（Doug Wead）进行了专访。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11709186.md#1" target="_blank">杨千嬅在综艺节目中爆哭 自嘲像娱乐圈的怪物</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11709186.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/04/150512084044100311-150x120.jpg" align ="left"></a>一向以活泼开朗个性示人的香港艺人杨千嬅，近日在大陆综艺节目《妻子的浪漫旅行3》中大谈婚前婚后的变化，并一度曾因朋友的渐行渐远讲到大哭，自嘲“像娱乐圈怪物”，令其在场外的丈夫丁子高看到后非常心疼。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718850.md#1" target="_blank">中国高校性丑闻不断 宁波大学副教授也出事</a><br></h3>继北京大学、上海财经大学教授曝出性丑闻后，宁波大学女生在网上举报遭该校副教授性骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 2:01 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717889.md#1" target="_blank">长期熬夜写作业 河南小学生险失明</a><br></h3>近日，河南焦作一名六年级女孩因眼球疼痛、眼睛没有光感而前往医院就医。医生诊断为急性视神经网膜炎。据女孩的家长介绍，女孩因做作业慢，长期熬夜，一天只睡6个小时。经过治疗，女孩的视力恢复到1.0。医生建议，学校布置作业的量要适当。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 5:06 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717330.md#1" target="_blank">日本正品告输中国山寨版 无印良品上诉失败</a><br></h3>中国再现山寨版吿赢原创品牌案。北京高院近日做出最终判决，判日本无印良品败诉，并责令其不但要删除纺织类商品上的“无印良品”商标，还须赔偿原告（北京无印良品）62.5万元人民币。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 3:08 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11717468.md#1" target="_blank">河南安置房一敲就碎 民众：谁敢收房住进去？</a><br></h3>近日，河南郑州金水区小贺庄村安置房，被村民发现是豆腐渣工程——磁砖一碰就掉、梁柱混凝土破碎掉落等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 2:03 PM							</td></tr>
@@ -28,6 +29,5 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709669.md#1" target="_blank">被曝性侵的上海财大副教授 辞三公司董事</a><br></h3>被曝性侵女硕士生的上海财经大学副教授钱逢胜，两天内辞去三间上市公司独立董事的职务，原因均为“因个人原因”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 12:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/9/n11709631.md#1" target="_blank">每日三退声明精选（2019/12/08）</a><br></h3>我是一名员警家属，知道我们那里有炼法轮功的被残酷迫害，今听到真相，我决定退出中共邪党的少先队组织，并且要给丈夫讲清真相，不让他参与迫害好人，选择美好未来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11708050.md#1" target="_blank">四川男子双手发黑疑患血栓 医生：裤子掉色</a><br></h3>近日，四川泸州一名男子前往医院就诊，称自己双手突然发黑，认为自己患了血栓。医生让他用肥皂洗手两次后，他的皮肤恢复了正常，原来这是男子的裤子掉色所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:42 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/8/n11707999.md#1" target="_blank">深圳两幼童身上淤青不断 竟是皮肤内有虫</a><br></h3>最近，深圳两名小兄妹身上反复出现淤青，且每次淤青的位置都不定，于是被送往医院检查。据医生介绍，小兄妹被确诊为绦虫类囊虫病，虫子进入人体后在体内到处游走，导致皮出现结节和轻微淤青。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_2.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/ncid282_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid282_2.htm">http://www.epochtimes.com/gb/ncid282_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
