--- a/gb/ncid277_3.md
+++ b/gb/ncid277_3.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723940.md#1" target="_blank">北京暂停原订15日生效的对美新关税</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1148843006-150x120.jpg" align ="left"></a>美中周五（12月13日）宣布达成第一阶段贸易协议后，中方周日（15日）宣布，暂不实施原订15日对部分美国商品加征关税的计划。美方早前也宣布了暂停实施15日生效的对华新关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:13 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723627.md#1" target="_blank">驱逐低端人口后 北京外来人口连3年负增长</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/GettyImages-881550670-150x120.jpg" align ="left"></a>北京驱逐低端人口后，最新数据显示，外来常住人口连续3年负增长，常住人口也连续两年减少。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 6:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723672.md#1" target="_blank">程晓容：林郑进京述职 中南海如何收拾残局</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723672.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912080230442188-1-150x120.jpg" align ="left"></a>当百万民众怒吼，国际社会同声援港时，中南海若再对林郑表示坚决支持，还要重复洗脑谎言、续演恐怖，那真是自判死刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723546.md#1" target="_blank">孙小果案19人获刑 母囚20年 孙小虹涉案</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723546.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/15a3384fe6b59efe_ttl7daypku_12-150x120.jpg" align ="left"></a>12月15日，云南昆明恶霸孙小果案的19名相关人员获刑。其中孙小果继父、母亲分别获刑19年、20年。对官方消息，网民纷纷质疑这不是真相。此外，官方指时任云南省最高法院院长的孙小虹参与孙小果案，而孙小虹此前被网民指认为孙小果舅舅。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:26 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723396.md#1" target="_blank">【美国思想领袖】班农专访字幕版（中）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/15/n11723396.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e05d030d4a1c85_ttl7day3Kd_15dfb4496b5f3de3_ttl7dayDK6_9050536f11cc1633-150x120.jpg" align ="left"></a>“在过去的20年里，中共变得更加激进，他们变得更加危险，他们变得更加腐败，他们变得更像流氓，这是为什么呢？”前白宫首席策略师史蒂夫?班农（Steve Bannon）接受了英文大纪元资深记者杨杰凯在 “美国思想领袖”系列节目中说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 11:01 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722859.md#1" target="_blank">川普顾问：中方对民主党弹劾川普不感兴趣</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/1504221740092732-150x120.jpg" align ="left"></a>白宫对华贸易顾问表示，中共高官子女多美国学历，他们很清楚国会的弹劾运作，不过现在连他们也不关心民主党弹劾川普（特朗普）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:07 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723177.md#1" target="_blank">印度提升核潜艇军力 对中共意味着什么</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1171572418-1-150x120.jpg" align ="left"></a>印度完成第一艘国产弹道导弹核潜艇“歼敌者号”（INS Arihant）的首次航行，包括BBC在内的多家媒体报导，印度将在近日进行该潜艇的核试射。如果成功，对中共来说，将构成一个严重的核威慑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:02 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723135.md#1" target="_blank">USMCA可被视为是未来美国贸易协议模板</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1066714518-600x400-1-150x120.jpg" align ="left"></a>川普（特朗普）政府与加拿大和墨西哥近日就《美墨加贸易协定》（USMCA）的一些最后更改达成共识。美媒称，USMCA可能已成为美国与其它国家展开贸易谈判的一个模板。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:15 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722972.md#1" target="_blank">官媒报北京高官夏林茂调任杭州市长 诡异辟谣</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722972.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e8596354fd4a64df7b8920a32f9be2d8-150x120.jpg" align ="left"></a>正值北京官场遭到当局持续清洗之际，《北京日报》近日发布了京官夏林茂调任杭州市任职的消息，不久却罕见地发表声明“辟谣”，否认了这家省级党报刚刚公布的人事变动消息，随后多家官媒也先后删除了相关报导。不过，中共官媒的诡异动向却引起舆论关注和热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:03 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723061.md#1" target="_blank">中色集团副总被查 曾主掌亚洲第一大金矿</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723061.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/yangqi_1-150x120.jpg" align ="left"></a>履新三个月后，中国有色矿业集团有限公司党委委员、副总经理杨奇日前落马。杨奇曾任中国黄金集团有限公司副总经理6年多，并曾担任被称为“亚洲第一大金矿”的甘肃阳山金矿的一把手。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 6:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722898.md#1" target="_blank">【热点互动】美中协议出炉 习遇挫或川普中计？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e04c784ed5853a_ttl7dayp4B_15e04c2b2e17eb8f_ttl7dayOvB_e64909efeac4dfb4-150x120.jpg" align ="left"></a>美中原则上达成第一阶段协议。中方在北京时间周五（12/13）深夜召开新闻发布会，美国方面也随即发布声明。川普总统在推文中透露：中方答应结构性改革并大量增购农产品。美方也做出了关税让步。那么这个第一阶段协议到底是个什么样的协议？对双方有何影响？北京为何要求马上开始第二阶段谈判？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 5:30 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722813.md#1" target="_blank">中共地方官媒自曝公安局长入股涉黄场所</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722813.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/492e7625de70ee4a4531ee7b9109b73e-150x120.jpg" align ="left"></a>中共政法系统官员不但贪腐，充当黑社会的保护伞，而且有的甚至投资入股涉黄场所、分红。中共地方官媒质疑，执法者监守自盗，还有公平正义可言吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722925.md#1" target="_blank">莱特希泽：谈判中最难的是达成第一份协议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722925.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1150582670-150x120.jpg" align ="left"></a>在长达十几个月的贸易谈判后，美中政府周五（12月13日）宣布达成第一阶段协议。尽管这个协议以中方增加对美国产品的购买为主导，结构性改革等最棘手问题留到下一阶段谈，但美国贸易代表莱特希泽表示，达成第一份协议才是最困难的事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722900.md#1" target="_blank">林郑赴京述职 16日见习李 传不见张晓明</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722900.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910151042332188-150x120.jpg" align ="left"></a>香港特首林郑月娥14日下午抵达北京，展开为期4天的一年一度的述职行程。据悉，林郑当日会同韩正会面，16日分别与习近平和李克强见面。据悉，今年林郑将不会与张晓明会面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:07 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722668.md#1" target="_blank">美中第一阶段贸易协议 八大看点一次看懂</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722668.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/GettyImages-1058995286-150x120.jpg" align ="left"></a>周五（12月13日），美中双方各自宣布，就第一阶段贸易协议的条款达成了共识。协议除了中方购买美国农产品，以及美方削减关税的条款外，还包括其它6个主要看点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 12:30 AM							</td></tr>
@@ -19,19 +31,7 @@
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721565.md#1" target="_blank">【新闻看点】美高官：北京以敌意回应美善意</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721565.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-dave-150x120.jpg" align ="left"></a>12月12日，美国国务院亚太助理国务卿史达伟（也有译作史迪威，David Stilwell）表示，几十年来，美国全方位帮助中国发展和实现现代化，却养肥了中共这头“白眼狼”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 4:43 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721514.md#1" target="_blank">日媒称王岐山外交角色有变 北京困境受关注</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721514.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1177691893-1-150x120.jpg" align ="left"></a>美中贸易战持续一年多后，日媒称，中共国家副主席王岐山的外交角色正在变化，力图改善与日本的关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:40 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721724.md#1" target="_blank">莱特希泽：中方2年内增购2000亿美商品和服务</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721724.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/da65518d6c71b91c4529397de469eac8-600x400-150x120.jpg" align ="left"></a>美国贸易代表罗伯特·莱特希泽（Robert Lighthizer）周五（12月13日）对记者说，作为美中第一阶段贸易协议的一部分，中方已同意在两年内增购320亿美元的美国农产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721541.md#1" target="_blank">华为出局 挪威电信选择爱立信提供5G服务</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Telenor_Fornebu-150x120.jpg" align ="left"></a>挪威电信（Telenor Group）周五（12月13日）表示，该公司选择瑞典爱立信作为其5G电信网路的主要技术供应商。挪威电信在与华为进行10年的4G合作后，将逐渐淘汰华为设备。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 1:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721362.md#1" target="_blank">美方贸易声明 强调双方达成强有力执行机制</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721362.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/GettyImages-909341704-2-150x120.jpg" align ="left"></a>美国贸易代表办公室（USTR）周五（12月13日）宣布声明，美中双方就第一阶段贸易协议达成了一项历史性的、且可执行性的协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 12:48 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721312.md#1" target="_blank">美中达成第一阶段协议 中方深夜召开新闻会</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-150x120.jpg" align ="left"></a>周四（12月12日），美媒报导称，川普已经批准与中方达成的一份“原则上协议”。北京则同意购买大量美国农产品，并做出其它让步，作为交换，美方将暂停12月15日生效的新一轮对华关税，同时削减一些已经加征的关税。白宫和中方计划于周五公布结果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 10:29 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720980.md#1" target="_blank">浸淫公安18年 陕西咸阳政法委前书记落马</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720980.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/ed65ff9c4214675936d6380fda4a5a30-150x120.jpg" align ="left"></a>12月13日，已经退休近7年的中共咸阳市委前常委、政法委前书记郭中秋被调查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 8:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720459.md#1" target="_blank">海风：中国官场迎来“辞职潮”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720459.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/01/1401182039212039-150x120.jpg" align ="left"></a>继富豪移民潮、资金外逃潮、民企倒闭潮、外企脱逃潮、网贷平台爆雷潮、房企倒闭潮、员工失业潮、民工返乡潮、银行倒闭潮之后，中国又迎来了一波官场“辞职潮”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:53 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720677.md#1" target="_blank">川普分享与里根的合照 有何含意？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20180323-Trump-SamiraBouaou-8329-1-2-150x120.jpg" align ="left"></a>美国总统川普（特朗普）于周四（12月12日）在社交媒体上分享了一张他与前总统里根（Ronald Reagan）的合照，但没有提供任何文字说明，其用意引起人们的揣测。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 5:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719387.md#1" target="_blank">范冰冰晒在美工作视频 早餐吃三颗枣为减肥？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719387.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/170321232150100311-150x120.jpg" align ="left"></a>当地时间12月11日，范冰冰在“范冰冰吧”官方微博分享在美国洛杉矶（LA）的工作点滴。她在晒出一段视频时配文道：“清早起床，拥抱LA的太阳，今天又是粉粉嫩嫩的一天！”视频中，她向粉丝介绍，她一早起来即开始保养敷面膜，然后在去上班的车上吃三颗大红枣当早餐，显得心情大好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 9:39 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719474.md#1" target="_blank">【美国思想领袖】班农专访 视频字幕版（上）</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719474.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3-10-150x120.jpg" align ="left"></a>前白宫首席策略师、前布莱巴特新闻（Breitbart News）执行主席史蒂夫?班农（Steve Bannon）接受了英文大纪元资深记者杨杰凯（Jan Jekielek）在 “美国思想领袖”（American Thought Leader）系列节目的专访。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:54 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719243.md#1" target="_blank">【热点互动】电脑设备用国货 中共欲与西方脱钩</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719243.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15dfb748c5f4a8e7_ttl7day38S_609b5336300b3930-150x120.jpg" align ="left"></a>近日外媒报导，中共要求政府机关在3年内，将电脑设备和软件全部改用国产货。这将影响到2000～3000万电脑设备。外界分析这是中共想在科技上与西方脱钩的最新努力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719438.md#1" target="_blank">反送中半年 中环超4万人集会“齐上齐落”</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11719438.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/photo_2019-12-13_08-11-48-150x120.jpg" align ="left"></a>12月12日，香港反送中运动半年之际，4万3千人聚集中环的爱丁堡广场举行“612半周年齐上齐落集会”，各界代表台上分享了这半年的感想及表达继续抗暴的决心，并表示面对中共最大的敌人将不切割、不分化、齐上齐落。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 7:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722138.md#1" target="_blank">【翻墙必看】贸易战 中共作出重大让步</a><br></h3>在今天贸易代表办公室的声明中指出，协议要求中方在知识产权、技术转让、农产品、金融服务和汇率等领域进行结构性改革。重要的是“建立了强大的争端解决机制，可确保迅速、有效的实施和执行”。这意味北京已经作出了重大让步了！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 9:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722439.md#1" target="_blank">云南高院原院长被处分 曾涉孙小果案</a><br></h3>日前，云南高级法院原党组书记、院长赵仕杰被留党察看一年处分，按二级巡视员确定其退休待遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:48 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11720853.md#1" target="_blank">台《情工法》三读 间谍最重无期徒刑终身追诉</a><br></h3>立法院院会13日三读通过《国家情报工作法》修正案，除了把窃取营业秘密资讯纳入侦防工作重点之外，也大幅提高刑责，若替外国势力或境外敌对势力以刺探、搜集、窃取、泄露、交付情报来源，将从7年以上有期徒刑调整为无期徒刑或10年以上有期徒刑，并可终身追诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:23 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11719940.md#1" target="_blank">中共经济会议结束 七常委出席不见王岐山</a><br></h3>为期3天的中共中央经济工作会议在北京举行，该会议承认经济下行压力加大。当天，习近平、李克强等中共七常委出席会议，但独缺中共国家副主席王岐山。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月13日 12:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_3.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/ncid277_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_3.htm">http://www.epochtimes.com/gb/ncid277_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
