--- a/gb/nsc413_5.md
+++ b/gb/nsc413_5.md
@@ -1,18 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/kjeqw2335/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kjeqw2335/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/kjeqw2335/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722859.md#1" target="_blank">川普顾问：中方对民主党弹劾川普不感兴趣</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722859.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/04/1504221740092732-150x120.jpg" align ="left"></a>白宫对华贸易顾问表示，中共高官子女多美国学历，他们很清楚国会的弹劾运作，不过现在连他们也不关心民主党弹劾川普（特朗普）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:07 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723156.md#1" target="_blank">腹泻发烧 吉林数十小学生疑感染诺如病毒</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723156.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1412270457252120-150x120.jpg" align ="left"></a>吉林省吉林市第二实验小学有数十名学生，周五（13日）晚先后出现恶心、呕吐、腹痛腹泻、发热等症状，已初步排除食物中毒，经现场流行病学调查为疑似诺如病毒感染。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:04 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723177.md#1" target="_blank">印度提升核潜艇军力 对中共意味着什么</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1171572418-1-150x120.jpg" align ="left"></a>印度完成第一艘国产弹道导弹核潜艇“歼敌者号”（INS Arihant）的首次航行，包括BBC在内的多家媒体报导，印度将在近日进行该潜艇的核试射。如果成功，对中共来说，将构成一个严重的核威慑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 8:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723082.md#1" target="_blank">美财长：美中第一阶段协议有利全球经济</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/081_AFPS12491-150x120.jpg" align ="left"></a>周六（12月14日），美国财政部长史蒂芬·姆钦（Steven Mnuchin）在卡塔尔多哈论坛会议上表示，周五中美之间达成的“历史性”第一阶段贸易协议将促进全球经济增长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:21 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723135.md#1" target="_blank">USMCA可被视为是未来美国贸易协议模板</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723135.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1066714518-600x400-1-150x120.jpg" align ="left"></a>川普（特朗普）政府与加拿大和墨西哥近日就《美墨加贸易协定》（USMCA）的一些最后更改达成共识。美媒称，USMCA可能已成为美国与其它国家展开贸易谈判的一个模板。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:15 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722972.md#1" target="_blank">官媒报北京高官夏林茂调任杭州市长 诡异辟谣</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722972.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/e8596354fd4a64df7b8920a32f9be2d8-150x120.jpg" align ="left"></a>正值北京官场遭到当局持续清洗之际，《北京日报》近日发布了京官夏林茂调任杭州市任职的消息，不久却罕见地发表声明“辟谣”，否认了这家省级党报刚刚公布的人事变动消息，随后多家官媒也先后删除了相关报导。不过，中共官媒的诡异动向却引起舆论关注和热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:03 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723068.md#1" target="_blank">赴港参加反送中 陆男向港人道歉：对不起</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5986ba833d6bc96b557466538149950f-150x120.jpg" align ="left"></a>“面对（港人）这种热情，我真的觉得很惭愧。作为一个大陆同胞，很多人不分青红皂白指责他们是暴徒，指他们是废青，真的很惭愧。”一名到香港参加反送中活动的大陆男子对大纪元记者说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 6:40 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723078.md#1" target="_blank">官媒称炒猪团人为制造猪瘟 被指是中共卸责</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723078.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/a9d58059d0b38147eab077765f0459fb-600x400-150x120.jpg" align ="left"></a>中共官媒称，非洲猪瘟失控的原因之一，是有“炒猪团”向其他人饲养的猪群投放非洲猪瘟病毒，借此牟取暴利。不过有分析认为，这是中共在推卸责任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 6:28 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723061.md#1" target="_blank">中色集团副总被查 曾主掌亚洲第一大金矿</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723061.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/yangqi_1-150x120.jpg" align ="left"></a>履新三个月后，中国有色矿业集团有限公司党委委员、副总经理杨奇日前落马。杨奇曾任中国黄金集团有限公司副总经理6年多，并曾担任被称为“亚洲第一大金矿”的甘肃阳山金矿的一把手。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 6:20 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723047.md#1" target="_blank">【新闻看点】美称胜利 中避谈细节 贸协存变数</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723047.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/04/Trump-and-Xi-in-Beijing-GettyImages-871865554-for-Selling-746-and-BW-576-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="美国总统川普开始了一系列对中共的贸易战举措，从表面上看对中国的经济和贸易非常严厉，但其长远的影响将会惠及中国的普通民众，会伤及中共既得利益集团的利益，并帮助中国人民清算赤龙的钱囊。图为川普和习近平2017年11月在北京。（Getty Images）" align ="left"></a>日前中美公布谈判结果，然而中方的诡异表现，引起外界诸多揣测。有分析认为，对与美方达成的这份协议，中共内部的意见可能并不一致，内部纷争可能还很明显。那么在这种情况下，美中目前的协议草案会不会生变呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 5:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723072.md#1" target="_blank">姆钦：美中第二阶段协议或分几个步骤</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N29D9-150x120.jpg" align ="left"></a>美国财政部长史蒂芬·姆钦（Steven Mnuchin）周六（12月14日）表示，中美之间第一阶段贸易协议对全球经济增长“非常有利”，且第二阶段贸易协议可能分几个步骤进行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 5:52 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722898.md#1" target="_blank">【热点互动】美中协议出炉 习遇挫或川普中计？</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/15e04c784ed5853a_ttl7dayp4B_15e04c2b2e17eb8f_ttl7dayOvB_e64909efeac4dfb4-150x120.jpg" align ="left"></a>美中原则上达成第一阶段协议。中方在北京时间周五（12/13）深夜召开新闻发布会，美国方面也随即发布声明。川普总统在推文中透露：中方答应结构性改革并大量增购农产品。美方也做出了关税让步。那么这个第一阶段协议到底是个什么样的协议？对双方有何影响？北京为何要求马上开始第二阶段谈判？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 5:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722727.md#1" target="_blank">前中共处级干部为何穿过三国边境逃出中国</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722727.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/01-zhangyijie-150x120.jpg" align ="left"></a>曾在中国（中共）国务院对外经贸部担任处级干部的张亦洁在研讨会上发言。张亦洁讲述了中共开始对法轮功的打压之后，她因为不放弃信仰，被撤销党、政职务，遭到七次非法绑架，期间受过几十种酷刑折磨……她最后被迫穿越三国边境、逃离中国的经历。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718825.md#1" target="_blank">追查国际主席：中共奴工产业危害美国及世界</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/12/n11718825.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a-1-150x120.jpg" align ="left"></a>12月10日是国际人权日，“全球反迫害制止中共暴行、声援退党大潮”研讨会在美国国会举行。追查国际（追查迫害法轮功国际组织，WOIPFG）主席汪志远在研讨会上发言，题为《中共奴工产业对美国及世界的危害》。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 4:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722813.md#1" target="_blank">中共地方官媒自曝公安局长入股涉黄场所</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722813.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/492e7625de70ee4a4531ee7b9109b73e-150x120.jpg" align ="left"></a>中共政法系统官员不但贪腐，充当黑社会的保护伞，而且有的甚至投资入股涉黄场所、分红。中共地方官媒质疑，执法者监守自盗，还有公平正义可言吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722925.md#1" target="_blank">莱特希泽：谈判中最难的是达成第一份协议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722925.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1150582670-150x120.jpg" align ="left"></a>在长达十几个月的贸易谈判后，美中政府周五（12月13日）宣布达成第一阶段协议。尽管这个协议以中方增加对美国产品的购买为主导，结构性改革等最棘手问题留到下一阶段谈，但美国贸易代表莱特希泽表示，达成第一份协议才是最困难的事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722900.md#1" target="_blank">林郑赴京述职 16日见习李 传不见张晓明</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722900.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910151042332188-150x120.jpg" align ="left"></a>香港特首林郑月娥14日下午抵达北京，展开为期4天的一年一度的述职行程。据悉，林郑当日会同韩正会面，16日分别与习近平和李克强见面。据悉，今年林郑将不会与张晓明会面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 2:07 AM							</td></tr>
@@ -30,8 +16,22 @@
 她认为.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 6:24 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721587.md#1" target="_blank">一张表看懂中美第一阶段贸易协议</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721587.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-150x120.jpg" align ="left"></a>中、美周五（12月13日）达成第一阶段贸易协议，虽然各自发表的协议框架保持高度一致，但在具体细节上仍存大大小小的差异。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722295.md#1" target="_blank">【拍案惊奇】港人如何取胜？美中协议有雷区</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722295.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019121433-150x120.jpg" align ="left"></a>今天呢，我们出一期新拍专题，与以往不同的是，今天包含两个专题栏目：首先还是有关香港，介绍两位美国资深专家，对香港问题的深入分析，来聊聊香港人抗争的走向。然后，我们会介绍美中达成的第一阶段贸易协议，以及接下来要面对的棘手问题。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:24 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11723140.md#1" target="_blank">20年最大国企债务违约 当局袖手引市场忧虑</a><br></h3>天津物产集团爆发20年来中国国企最大规模的美元债务违约，而中国政府没有提供支持，令债券市场大感意外。分析认为，中国政府的态度已有转变，未来投资者可能承担巨大损失。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月15日 7:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722237.md#1" target="_blank">香港抗争未平息 习近平将访问澳门引关注</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722237.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/01/1701170854291758-150x120.jpg" align ="left"></a>中共官媒14日发布消息称，习近平将在12月18日至20日到澳门访问。有分析认为这是中共在香港民众持续抗议，中共镇压未果的情况下，中共希望让澳门替代香港的企图。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:02 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721781.md#1" target="_blank">德国两大执政党联手 拟立法封杀华为</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721781.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/5G-150x120.jpg" align ="left"></a>德国大联合政府两大执政党——基民/基社联盟（CDU/CSU）和社民党（SPD）联合发起提案，要求设立5G建设新标准，排除那些“受制于政府、缺乏法律监督、有被操控或间谍刺探危险”的制造商。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 11:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721234.md#1" target="_blank">中央经济工作会议无新意 分析：中共难稳就业</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721234.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1201040316162320-600x400-150x120.jpg" align ="left"></a>为期3天的中共中央经济工作会议结束。中共官方发布了会议公告称，经济下行压力加大，并再次强调要“六稳”。此次会议公告了无新意，而民企近来遭中共严重打压，分析认为，中共未来难“稳”就业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721543.md#1" target="_blank">传香港TVB月底裁员近千 节目制作部占大头</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721543.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/190714080601100311-150x120.jpg" align ="left"></a>被称为香港“红媒之首”的无线台（TVB），因为在香港“反送中”“反极权”运动中的新闻报道偏颇，甚至刻意抹黑抗争民众，引发市民罢看、客户抵制，其收视率和广告收入不断下跌。现传出管理层为缩减开支，本月底将裁员近千，其中制作部将成重灾区。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:08 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721891.md#1" target="_blank">深圳宝安发生多起骚扰法轮功学员事件</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721891.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1-67-600x370-600x370-1-150x120.jpg" align ="left"></a>一年多来，深圳市宝安区发生多起电话骚扰、跟踪、拍照，非法搜查法轮功学员家等迫害事件，尤其是在中共“十一”大庆等所谓维稳节假日。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 9:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721940.md#1" target="_blank">莱特希泽：美中或明年1月签协议 川习不出席</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721940.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MY8OG-150x120.jpg" align ="left"></a>美国贸易代表罗伯特·莱特希泽（Robert Lighthizer）周五（12月13日）告诉记者，美中希望在明年1月的第一个星期签署第一阶段贸易协议。他透露，协议将不会由川普（特朗普）总统和习近平主席签署。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 6:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721958.md#1" target="_blank">中方是否兑现协议承诺 川普两幕僚说要观察</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/000_1G17D9-150x120.jpg" align ="left"></a>周五（12月13日），美中均宣布达成第一阶段协议，中方承诺增购大量美国商品，美方则取消12月15日的原定关税。白宫首席经济顾问拉里·库德洛（Larry Kudlow）对中美达成的贸易协议持谨慎乐观态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 6:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721901.md#1" target="_blank">【名家专栏】美国终于有了正确的对华政策</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05-flag--150x120.jpg" align ="left"></a>1947年2月，美国时任总统杜鲁门决定帮助希腊政府反击该国共产党的叛乱。他告诉美国人民，希腊内战是一场测试美国能否抵御国际共产主义的重要考验。杜鲁门声称反共，但他却忽略了世界第一人口大国中更严重的共产主义威胁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:59 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721849.md#1" target="_blank">中国经济高成本低效率 学者：脱实向虚</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721849.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/03/1411251109221366-150x120.jpg" align ="left"></a>随着中共中央经济工作会议的结束，中国经济走势再次引发关注，有学者深入分析指出中国经济高成本低效率，造成企业负担重，中共没有扎扎实实地发展实体经济，实体经济投资和企业效率低下，整体经济持续低迷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721564.md#1" target="_blank">【新闻看点】北京贸协重大让步 美中脱钩持续</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721564.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/692de107928fdd54b3d630cb0116890c-150x120.jpg" align ="left"></a>美国贸易代表办公室周五发声明表示，同中方达成了一项“历史性的、且可执行性的协议”。北京作出重大让步，使美中贸易谈判向前进了一步。但外界认为，美中最终的结局仍然无力改变：美中脱钩已经成了必然。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721754.md#1" target="_blank">美中达成贸易协议 清华学者：中共做出妥协</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721754.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1148901571-1-150x120.jpg" align ="left"></a>经过长达一年多的谈判后，美中双方终于达成了可执行的、第一阶段贸易协议。清华大学前讲师吴强对此表示，中共做出妥协。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 5:31 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721807.md#1" target="_blank">上海嘉里粮油公司突发大火 浓烟高达百米</a><br></h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2e241e93be2d9a9f7be8595e65f8f837-150x120.jpg" align ="left"></a>上海鑫德物流有限公司仓库火灾刚过去一个月，又一家上海公司的仓库发生特大火灾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 4:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722138.md#1" target="_blank">【翻墙必看】贸易战 中共作出重大让步</a><br></h3>在今天贸易代表办公室的声明中指出，协议要求中方在知识产权、技术转让、农产品、金融服务和汇率等领域进行结构性改革。重要的是“建立了强大的争端解决机制，可确保迅速、有效的实施和执行”。这意味北京已经作出了重大让步了！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 9:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722469.md#1" target="_blank">山东一动物园维修工疑被机器挤压身亡</a><br></h3>12月13日，山东济南市天桥区的济南动物园一名维修工人疑似被游乐场机器挤压，当场身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 3:00 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722439.md#1" target="_blank">云南高院原院长被处分 曾涉孙小果案</a><br></h3>日前，云南高级法院原党组书记、院长赵仕杰被留党察看一年处分，按二级巡视员确定其退休待遇。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 2:48 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/14/n11722193.md#1" target="_blank">每日三退声明精选（2019/12/13）</a><br></h3>在youtube上看到了共党迫害善良的人，使我感到愤怒，可又无能为力。我小时加入过少先队员，现今知晓善恶自愿退出少先队。虽然我的举动微不足道，希望可以在退党、退团、退队的人数中加上我一个。永远支持真善忍，愿所有人早日知道真相，并脱离魔鬼的掌控。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/19/12/13/n11721813.md#1" target="_blank">热依扎为角色谎称会骑马 又为圆谎落下病根</a><br></h3>因出演电视剧《甄嬛传》中的“宁贵人”一角走红的新疆女星热依扎，15岁时因完美身材成为模特而出道。大学毕业后开始拍戏的她，因担心拿不到角色而对导演谎称会骑马。而为了“圆谎”，她吃尽了苦头，过度的训练，让她落下了病根。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月14日 10:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md#1<br><a href="https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/kjeqw2335/djy/blob/master/gb/nsc413_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_5.htm">http://www.epochtimes.com/gb/nsc413_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
